--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# Applicationn context name
+server.contextPath=/
 
+# Here 'test' is the database name
+spring.datasource.url=jdbc:mysql://localhost/uma_dev
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
