Added Changes relate to CRUD operations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,15 @@ blob.container-name=appntcnt
 
 logging.level.org.springframework.jdbc.core=DEBUG
 
-spring.datasource.url=jdbc:sqlserver://appn.database.windows.net:1433;database=appnt;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.username=adminnt@appn
-spring.datasource.password=appPWD123
+#spring.datasource.url=jdbc:sqlserver://appn.database.windows.net:1433;database=appnt;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+#spring.datasource.username=adminnt@appn
+#spring.datasource.password=appPWD123
+
+## Mysql DB properties
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
 
 spring.datasource.initialization-mode=always
