Added spring JWT security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.datasource.username=adminnt@appn
 spring.datasource.password=appPWD123
 
 spring.datasource.initialization-mode=always
+security.oauth2.resource.filter-order=3
