API changes to register(sen email to Board owner), update, delete user and senbBard invitation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.datasource.password=NBoard@2020
 #spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
+application.database.properties.key=APP_PROPERTIES
+
 
 spring.datasource.initialization-mode=always
 
